// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateModuleCpp can generate fixture EMPTY_NATIVE_MODULES 1`] = `
Map {
  "EMPTY_NATIVE_MODULES.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include \\"NativeEMPTY_NATIVE_MODULESTurboCxxModuleSpecJSI.h\\"

namespace facebook {
namespace react {




} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleCpp can generate fixture SIMPLE_NATIVE_MODULES 1`] = `
Map {
  "SIMPLE_NATIVE_MODULES.cpp" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include \\"NativeSIMPLE_NATIVE_MODULESTurboCxxModuleSpecJSI.h\\"

namespace facebook {
namespace react {




} // namespace react
} // namespace facebook
",
}
`;
